# nexus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LINKEDIN_POST.md  MULTI_LANGUAGE_SDK.md  PLATFORM_STRATEGY.md  README.md  SECURITY_ANALYSIS.md  SECURITY_AUDIT.md  SECURITY_EVIDENCE.md  STAR_STRATEGY.md  TECHNICAL_REVIEW.md  VIRAL_POST.md  benchmark.py  benchmark_full.py  post-linkedin-v2.md  post-linkedin.md  post-product-hunt.md
crates/nexus-ollama/: Cargo.toml
crates/nexus-ollama/src/: client.rs  lib.rs  models.rs
crates/nexus-protocol-core/: Cargo.toml
crates/nexus-protocol-core/examples/: ollama_test.rs
crates/nexus-protocol-core/src/: auth.rs  binary_protocol.rs  capabilities.rs  connection_pool.rs  error.rs  language.rs  lib.rs  message.rs  prompt_guard.rs  rate_limit.rs  sandbox_policy.rs  security_headers.rs  version.rs
crates/nexus-protocol-core/src/v2/: mod.rs
crates/nexus-sandbox/: Cargo.toml
crates/nexus-sandbox/src/: compiler.rs  lib.rs  limits.rs  policy.rs  runtime.rs
crates/nexus-sdk/go/: nexus.go
crates/nexus-sdk/python/: EXAMPLES.md  PYTHON_SDK_UX.md  README.md  pocket-ide.html  pyproject.toml
crates/nexus-sdk/python/examples/: usage.py
crates/nexus-sdk/python/nexus_protocol/: __init__.py  providers.py
crates/nexus-sdk/python/tests/: __init__.py  conftest.py  test_benchmarks.py  test_nexus_protocol.py  test_smoke.py  test_unit.py
crates/nexus-sdk/ts/: nexus.ts
tests/e2e/: harness.rs  protocol_tests.rs  security_tests.rs
