[package]
name = "nexus-ollama"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
nexus-protocol-core = { path = "../nexus-protocol-core" }
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
url.workspace = true
reqwest.workspace = true

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
