[package]
name = "nexus-protocol-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
bytes.workspace = true
url.workspace = true
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
nexus-ollama = { path = "../nexus-ollama" }
tokio = { version = "1", features = ["full"] }
