[package]
name = "nexus-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
nexus-protocol-core = { path = "../nexus-protocol-core" }
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
bytes.workspace = true

# Async
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
