[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-protocol"
version = "0.1.0"
description = "Nexus Protocol Python SDK - Easy integration for any language"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kaio", email = "kaio@vortex.ia.br" }
]
keywords = ["nexus", "protocol", "sandbox", "wasm", "ollama", "ai", "code-execution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = ["websockets>=12.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://nexusprotocol.ai"
Repository = "https://github.com/vortex-ia/nexus-protocol"
Documentation = "https://docs.nexusprotocol.ai"

[tool.hatch.build.targets.wheel]
packages = ["nexus_protocol"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio-mode = "auto"
testpaths = ["tests"]
